# ros_ndi_sensors

./: README.md
aurora_sensor/: CMakeLists.txt  package.xml
aurora_sensor/scripts/: broadcast_aurora.py
polaris_sensor/: CMakeLists.txt  package.xml
polaris_sensor/config/: view.rviz
polaris_sensor/include/polaris_sensor/: polaris_sensor.h
polaris_sensor/launch/: ndi_polaris_driver.launch
polaris_sensor/src/: polaris_ros.cpp  polaris_ros_double.cpp
ros_ndi_tracker/: CMakeLists.txt  package.xml
ros_ndi_tracker/config/: aurora_config.yaml  polaris_config.yaml  sample.rviz
ros_ndi_tracker/launch/: start_aurora_sensor.launch  start_polaris_sensor.launch  start_test_ndi_tracker.launch
ros_ndi_tracker/msg/: NDISensor.msg
ros_ndi_tracker/scripts/: broadcast_ndi_sensor.py  rom_parser.py  rom_parser_vis.ipynb  test_ndi_tracker.py  test_nditrack.py
